--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -1,11 +1,32 @@
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  labels:
-    app.kubernetes.io/name: kubebuilder-sample
-    app.kubernetes.io/managed-by: kustomize
   name: manager-role
 rules:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "list", "watch"]
+- apiGroups:
+  - example.sk.com.my.domain
+  resources:
+  - stacks
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - example.sk.com.my.domain
+  resources:
+  - stacks/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - example.sk.com.my.domain
+  resources:
+  - stacks/status
+  verbs:
+  - get
+  - patch
+  - update
